zz-out/pass14_run2/zz-scripts/chapter07/plot_fig03_invariant_I1.err
  File "/home/jplal/MCGT/zz-scripts/chapter07/plot_fig03_invariant_I1.py", line 114
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
